[package]
name = "loader"
version = "0.2.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3.3.0"
reqwest = { version = "0.11.9", features = ["blocking", "json"] }
zip = "0.5.13"
string = "0.3.0"

[target.'cfg(target_os="windows")'.build-dependencies]
winres = "^0.1"